eks/sg.tf
resource "aws_security_group" "test-cluster" {
  name        = "eks-${var.project}-${var.environment}-sg"
  description = "Cluster communication with worker nodes"
  vpc_id      = aws_vpc.mod.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-${var.project}-${var.environment}-sg"
  }
}

resource "aws_security_group_rule" "demo-cluster-ingress-workstation-https" {
  cidr_blocks       = ["181.132.35.111/32"]
  description       = "Allow mypc to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.test-cluster.id
  to_port           = 443
  type              = "ingress"
}

resource "aws_security_group" "test-node" {
  name        = "eks-node-${var.project}-${var.environment}-sg"
  description = "Security group for all nodes in the cluster"
  vpc_id      = aws_vpc.mod.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = map(
     "Name", "eks-node-${var.project}-${var.environment}-sg",
     "kubernetes.io/cluster/${local.cluster_name}", "owned",
    )
}

resource "aws_security_group_rule" "test-node-ingress-self" {
  description              = "Allow node to communicate with each other"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.test-node.id
  source_security_group_id = aws_security_group.test-node.id
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "test-node-ingress-cluster" {
  description              = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
  from_port                = 1025
  protocol                 = "tcp"
  security_group_id        = aws_security_group.test-node.id
  source_security_group_id = aws_security_group.test-cluster.id
  to_port                  = 65535
  type                     = "ingress"
}
resource "aws_security_group_rule" "test-cluster-ingress-node-https" {
  description              = "Allow pods to communicate with the cluster API Server"
  from_port                = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.test-cluster.id
  source_security_group_id = aws_security_group.test-node.id
  to_port                  = 443
  type                     = "ingress"
}
